# security

./: README.md
Coursera/Python for Cybersecurity Specialization/: pyproject.toml
Coursera/Python for Cybersecurity Specialization/Python for Cybersecurity/Week 3/Default Account/: defaults.txt
Coursera/Python for Cybersecurity Specialization/Week 1/: Quiz.md
Coursera/Python for Cybersecurity Specialization/Week 2/DNS Exploration/: dns_exploration.ipynb
Coursera/Python for Cybersecurity Specialization/Week 2/Network Scan/: network_scan.ipynb
Coursera/Python for Cybersecurity Specialization/Week 2/Scapy Intro/: intro_scapy.ipynb
Coursera/Python for Cybersecurity Specialization/Week 3/Autorun scripts/: create_usb.ipynb
Coursera/Python for Cybersecurity Specialization/Week 3/Default Account/: default_account.ipynb
PE-Parser/rs-pe/: Cargo.toml
PE-Parser/rs-pe/src/: main.rs
PE-Parser/rs-pe/src/crypto/: mod.rs  xor.rs
PE-Parser/rs-pe/src/helpers/: mod.rs  take_bytes.rs  take_words_array.rs
PE-Parser/rs-pe/src/pe/: mod.rs  pe.rs
PE-Parser/rs-pe/src/pe/headers/: coff_file_header.rs  data_directory.rs  dos_header.rs  mod.rs  optional_header.rs  parsable.rs  rich_header.rs
PE-Parser/rs-pe/src/pe/readers/: mod.rs  read_and_parse.rs
