[tool.poetry]
name = "py4cyber"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
jupyterlab = "^4.0.7"
scapy = "^2.5.0"
jupyter = "^1.0.0"
dnspython = "^2.4.2"
paramiko = "^3.3.1"
pyinstaller = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
